# khulnasoft-lab-_-figurative

./: .codeclimate.yml  .coveragerc  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  Dockerfile  README.md  mypy.ini  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml  osx.yml  pip-audit.yml  release.yml
docs/: Makefile  base.rst  conf.py  evm.rst  gotchas.rst  index.rst  make.bat  native.rst  states.rst  utilities.rst  verifier.rst  wasm.rst  worker.rst
examples/: README.md
examples/evm/: asm_to_smtlib.py  complete.py  coverage.py  mappingchallenge.py  minimal-json.py  minimal.py  minimal_bytecode_only.py  reentrancy_concrete.py  reentrancy_symbolic.py  simple_mapping.py  use_def.py
examples/linux/: arguments.c  baby-re.c  basic.c  basic_state_merging.c  crackme.py  ibranch.c  indexhell.c  introspect_state.py  ioctl_bogus.c  ioctl_socket.c  simpleassert.c  sindex.c  strncmp.c
examples/script/: basic_statemerging.py  concolic.py  count_instructions.py  introduce_symbolic_bytes.py  (+5 more)
figurative/: __init__.py  __main__.py  exceptions.py
scripts/: extract_syscalls.py  follow_trace.py  prof.py  run_tests.sh  stats.py  verify.py
server/: .gitignore  README.md  justfile  pyproject.toml  setup.py
server/figurative_server/: FigurativeServer.proto  FigurativeServer_pb2.py  FigurativeServer_pb2.pyi  FigurativeServer_pb2_grpc.py  __init__.py  evm_utils.py  figurative_server.py  introspect_plugin.py  native_plugin.py  native_utils.py
server/tests/: test_ethereum.py  test_native.py
tests/: conftest.py
(+104 files in other folders)
